Leaving lab, fixed getting current location and working on linking Firebase

--- a/MidtermProject/Info.plist
+++ b/MidtermProject/Info.plist
@@ -3,7 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Dispatch is asking for your current location.</string>
+	<string>Dispatch needs your location.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Dispatch would like your location.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
